crates/nrzrepo-lib/src/snapshots/nrzrepo_lib__opts__test__force.snap
---
source: crates/nrzrepo-lib/src/opts.rs
expression: cache_config
---
Ok(
    CacheConfig {
        local: CacheActions {
            read: false,
            write: true,
        },
        remote: CacheActions {
            read: false,
            write: true,
        },
    },
)
