crates/nrzrepo-lib/src/snapshots/nrzrepo_lib__opts__test__nrz_boundaries_--filter_foo.snap
---
source: crates/nrzrepo-lib/src/opts.rs
expression: "json!({\n    \"tasks\": opts.run_opts.tasks, \"filter_patterns\":\n    opts.scope_opts.filter_patterns\n})"
---
{
  "tasks": [],
  "filter_patterns": [
    "foo"
  ]
}
