crates/nrzrepo-lib/src/snapshots/nrzrepo_lib__opts__test__remote-cache-read-only.snap
---
source: crates/nrzrepo-lib/src/opts.rs
expression: cache_config
---
Ok(
    CacheConfig {
        local: CacheActions {
            read: true,
            write: true,
        },
        remote: CacheActions {
            read: true,
            write: false,
        },
    },
)
